# graph-scaling

./: .gitignore  CITATION.cff  CMakeLists.txt  Main.cpp  Makefile  README.md  Scaler.cpp  Scaler.h  Scaling.cpp  Scaling.h  TODO.txt  install_dependencies.sh
GraphShrinkingExpanding/: GraphShrinkingExpanding.vcxproj  Main.cpp  kernel.cu
GraphShrinkingExpanding/expanding/: Expanding.cpp  Expanding.h  SampledGraphVersionStruct.h
GraphShrinkingExpanding/io/: COOStruct.h  GraphIO.cpp  GraphIO.h
GraphShrinkingExpanding/kernel/: kernel.cu  kernel.h
GraphShrinkingExpanding/sampling/: BridgeEdgeStruct.h  SampledGraphVersionStruct.h  Sampling.cpp  Sampling.h
docs/: distributed.md  performance.md  performance_results_bfs_pr.csv
graph/: Edge.cpp  Edge.h  Graph.cpp  Graph.h
io/: GraphIO.cpp  GraphIO.h  GraphLoader.cpp  GraphLoader.h  UserInput.cpp  UserInput.h  WriteGraph.cpp  WriteGraph.h  WriteSampledGraph.cpp  WriteSampledGraph.h  WriteScaledUpGraph.cpp  WriteScaledUpGraph.h
io/user-input/: UserInput.cpp  UserInput.h  UserInputCMD.cpp  UserInputCMD.h  UserInputPrompt.cpp  UserInputPrompt.h
kernel/: CudaErrCheck.h  kernel.cu  kernel.h
loader/: GraphLoader.cpp  GraphLoader.h
old-source/: GraphShrinkingExpanding.sln
old-source/GraphShrinkingExpanding/: GraphShrinkingExpanding.vcxproj
plan/: ScalePlan.cpp  ScalePlan.h
sampling/: Sampling.cpp  Sampling.h  TIES.cpp  TIES.h
scaling/: Scaling.cpp  Scaling.h  ScalingManager.cpp  ScalingManager.h
scaling/scale-down/: ForestFire.cpp  ForestFire.h  RandomEdge.cpp  RandomEdge.h  RandomNode.cpp  RandomNode.h  Sampling.cpp  Sampling.h  TIES.cpp  TIES.h
scaling/scale-up/: IdentifierTracker.cpp  IdentifierTracker.h  ScaleUp.cpp  ScaleUp.h  ScaleUpSamplesInfo.cpp  ScaleUpSamplesInfo.h  ScalingUpConfig.cpp  ScalingUpConfig.h
tests/: TestHighDegreeBridge.cpp  TestInit.cpp  TestScalingUpConfig.cpp
tests/model/: TestChainModel.cpp  TestFullyConnectedModel.cpp  TestRingModel.cpp  TestStarModel.cpp
(+65 files in other folders)
